# exam3

./: CMakeLists.txt
.github/workflows/: c-cpp.yml
include/: MyAllocator.h  MyContainer.h  factorial.h
src/: CMakeLists.txt  MyAllocator.cpp  Test.cpp
tests/: CMakeLists.txt  test.cpp
